# hyprgrid

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/: build.yml
resources/: hypr-grid-manager.desktop  resources.qrc
src/: config.cpp  config.h  gridcell.cpp  gridcell.h  gridmanager.cpp  gridmanager.h  gridpreview.cpp  gridpreview.h  hyprlandapi.cpp  hyprlandapi.h  main.cpp  mainwindow.cpp  mainwindow.h
src/ui/: mainwindow.ui
